chore: GUI fix: default timeline-object background color was a tad unreadable

--- a/apps/app/src/react/styles/layer.scss
+++ b/apps/app/src/react/styles/layer.scss
@@ -25,7 +25,7 @@
 			height: $layerHeight;
 			display: flex;
 			align-items: center;
-			background: silver;
+			background: #666;
 			position: absolute;
 			padding: 0 0.5rem;
 			box-sizing: border-box;
